<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/k_space_bg_unpress"
        android:orientation="vertical"
        android:padding="10dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dip"
            android:minWidth="150dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="60dip"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:text="@string/kans_name_text"
                android:textColor="@color/k_text_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/roduct_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dip"
                android:gravity="center"
                android:hint="@string/kans_name_text_hine"
                android:textColor="@color/k_text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_margin="10dip"
            android:background="@color/k_item_press" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dip"
            android:minWidth="150dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="60dip"
                android:layout_height="match_parent"
                android:layout_gravity="left|top"
                android:gravity="right|center_vertical"
                android:text="@string/kans_remark_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/roduct_remark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dip"
                android:gravity="left|top"
                android:hint="@string/kans_remark_text_hine"
                android:textColor="@color/k_text_color"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>